fixedimgpadand about spacing

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -49,7 +49,7 @@ body {
   font-family: 'Aktiv Grotesk', sans-serif !important;
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 2;
   color: #212529;
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
